c3prj1_deck/grade.txt
Grading at Wed Feb 27 23:45:18 UTC 2019
Compiling deck.c
deck.c: In function ‘shuffle’:
deck.c:29:7: error: unused variable ‘rand’ [-Werror=unused-variable]
   int rand;
       ^
cc1: all warnings being treated as errors
Could not compile your deck.c!

Overall Grade: FAILED
